# META-Google-Co-Innovation-unofficial

./: .gitignore  README.md
01-tutorials/01-adk-agentengine-vertexai-mass/llama4-adk-agent/: pyproject.toml
03-demos/vogue-concierge/: .gitignore  README.md  bundle.py  config.py  config.yml  main.py  pyproject.toml  test_local.sh  utils.py  yaml_parser.py
03-demos/vogue-concierge/deploy/: delete_resources.py  deploy_to_ae.py  deploy_to_cr.py  deployed_resources.yml  load_data.py  load_data_bigquery.py  load_data_catalog.py  load_data_rag.py  required_apis.yml  required_auth.yml
03-demos/vogue-concierge/lib/: __init__.py  file_utils.py  shell_utils.py
03-demos/vogue-concierge/tests/: test_agent.py  test_app.py
03-demos/vogue-concierge/vogue_concierge_agent/: agent.py  prompt.py  tools.py
03-demos/vogue-concierge/vogue_concierge_app/backend/: .gcloudignore  agent_engine_agent.py  config.py  local_agent.py  main.py  pyproject.toml
03-demos/vogue-concierge/vogue_concierge_app/frontend/: next.config.ts
03-demos/vogue-concierge/vogue_concierge_app/frontend/app/: globals.css  layout.tsx  page.tsx
03-demos/vogue-concierge/vogue_concierge_app/frontend/components/: ChatMessage.tsx  Header.tsx  ProductCards.tsx  SamplePrompts.tsx
